mydigitalmeal/assets/scss/base/studies.scss
@use '../abstracts/index' as *;
@use 'typography';

.instruction-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: center;

  .uploader-name {
    display: none;
  }
}

.instruction-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: center;
  h1 {
    @extend .mdm-lead;
    text-align: center;
  }
}

.instruction-section {
  max-width: 800px;
  width: 100%;
}

.instruction-section {
  color: white;
}

.instruction-section-app {
  .instruction-img {
    width: 200px;
    max-width: 80%;
  }
}

.instruction-section-browser {
  .instruction-img {
    width: 400px;
    max-width: 80%;
  }
}

.instruction-row {
  padding-top: 60px;
  padding-bottom: 60px;
  border-bottom: 1px solid #3c3c3c;
}

.instruction-row-narrow {
  padding-top: 20px !important;
  padding-bottom: 20px !important;
}

.instruction-text-col {
  @extend .mdm-text;
  font-size: 24px;
  line-height: 32px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;

  @media (min-width: $bp-md) {
    text-align: left;
  }
}

.instruction-img-col {
  display: flex;
  flex-direction: row;
  align-content: start;
  align-items: start;
  justify-content: center;
  padding-top: 15px;

  @media (min-width: $bp-md) {
    justify-content: start;
    padding-top: 0;
  }

}

.instruction-collapsible {
  font-size: 18px;
  line-height: 26px;
  padding: 10px;
  border-radius: 5px;
  background: #2e2e2e;
  margin-top: 20px;
  margin-bottom: 20px;
  text-align: left;

  a:hover {
    color: darkgrey !important;
  }

  .instruction-toggle {
    font-weight: bolder;
    text-decoration: none !Important;
  }

  .instruction-collapsible-body {
    padding-top: 20px;
  }

}

.instruction-nav-button {
  font-size: 28px !important;
  padding-top: 6px !important;
  padding-bottom: 6px !important;

  @media (min-width: $bp-md) {
    font-size: 32px !important;
  }

}

.instruction-back {
  background: grey !important;
}

.instruction-device-link {
  color: #5c5c5c !important;
}

.instruction-nav {
  margin-top: 40px;
  max-width: 800px;
  width: 100%;

  a:hover {
    color: #4c4c4c !important;
  }
}

.device-links {
  a:hover {
    color: #4c4c4c !important;
  }
}

.skip-btn {
  font-size: 28px !important;
  color: gray !important;
  background: #2c2c2c;
  float: none;

  &:hover {
    background: #3a3a3a;
    filter: none;
    color: gray !important;
  }

  @media (min-width: $bp-md) {
    font-size: 32px !important;
  }

}

